web build,hosting

--- a/web/index.html
+++ b/web/index.html
@@ -31,8 +31,55 @@
 
   <title>memo_app</title>
   <link rel="manifest" href="manifest.json">
+
+  <script>
+    // The value below is injected by flutter build, do not touch.
+    const serviceWorkerVersion = null;
+  </script>
+  <!-- This script adds the flutter initialization JS code -->
+  <script src="flutter.js" defer></script>
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+  <script>
+    window.addEventListener('load', function(ev) {
+      // Download main.dart.js
+      _flutter.loader.loadEntrypoint({
+        serviceWorker: {
+          serviceWorkerVersion: serviceWorkerVersion,
+        },
+        onEntrypointLoaded: function(engineInitializer) {
+          engineInitializer.initializeEngine().then(function(appRunner) {
+            appRunner.runApp();
+          });
+        }
+      });
+    });
+  </script>
+
+  <!-- Firebase SDK -->
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-analytics.js";
+
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyAj6AiM9y0TfD7RJsYw-AyRqN2WcH6Bcs4",
+      authDomain: "memo-app-bfad2.firebaseapp.com",
+      projectId: "memo-app-bfad2",
+      storageBucket: "memo-app-bfad2.firebasestorage.app",
+      messagingSenderId: "133412454072",
+      appId: "1:133412454072:web:014b11a44ebb40297abe4d",
+      measurementId: "G-ZRJH7JEQM3"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+
+    // Firebase 객체를 전역으로 사용할 수 있도록 설정
+    window.firebaseApp = app;
+    window.firebaseAnalytics = analytics;
+  </script>
 </body>
 </html>
