--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,11 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  
+  <!-- Load environment variables -->
+  <script>
+    window.FIREBASE_API_KEY = '__FIREBASE_API_KEY__';  // This will be replaced during build
+  </script>
 </head>
 <body>
   <script>
@@ -64,7 +69,7 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyAj6AiM9y0TfD7RJsYw-AyRqN2WcH6Bcs4",
+      apiKey: window.FIREBASE_API_KEY || process.env.FIREBASE_API_KEY,
       authDomain: "memo-app-bfad2.firebaseapp.com",
       projectId: "memo-app-bfad2",
       storageBucket: "memo-app-bfad2.firebasestorage.app",
